openmediavault (5.1.0-1) unstable; urgency=low

  * Modify Notification RPCs.
  * Issue #503: Respect OMV_SAMBA_FRUIT_MODEL in Avahi SMB/CIFS service
    configuration. Defaults to 'MacPro'.
  * Issue #510: Fix issues in /etc/hosts.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 10 Nov 2019 22:05:55 +0100

openmediavault (5.0.14-1) unstable; urgency=low

  * Fix bug when copying a SSH pub key to a remote machine.
  * Issue #492: Remove percentage text in progress bar when user
    reboots from UI.
  * Issue #499: IPv6 gateway not being set correctly.
  * Issue #500: Fix bug in systemd-networkd .link files. Added [Link]
    settings from /lib/systemd/network/99-default.link.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 05 Nov 2019 07:25:34 +0100

openmediavault (5.0.13-1) unstable; urgency=low

  * Apply opts when mounting a filesystem in fstab.sls.
  * Issue #489: Fix error when displaying the changelog of an
    update package.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Nov 2019 23:03:51 +0100

openmediavault (5.0.12-1) unstable; urgency=low

  * Update locales.
  * Fix bug in rsyncd.conf when setting hosts allow/deny in a module.
  * Issue #442: WOL is not enabled.
  * Issue #448: Building configuration fails when an omv-engined module
    defines dependencies that are not marked as dirty.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 30 Oct 2019 07:40:03 +0100

openmediavault (5.0.11-1) unstable; urgency=low

  * Use the correct deploy target when enabling remote syslog.
  * Prevent the TTY error "mesg: ttyname failed: Inappropriate ioctl for
    device".
  * Fix bug in /srv/salt/omv/deploy/rrdcached/default.sls file which leads
    into an malformed BASE_OPTIONS variable in /etc/default/rrdcached.
  * Issue #468: Rrdcached monit config is not removed when collecting
    performance statistics is disabled.
  * Issue #480: Cannot to create multiple VLANs.
