@@ -1,6 +1,7 @@
 openmediavault (5.1.0-1) unstable; urgency=low
 
   * Modify Notification RPCs.
+  * Issue #467: Form fieldsets not showing titles in Safari browser.
   * Issue #503: Respect OMV_SAMBA_FRUIT_MODEL in Avahi SMB/CIFS service
     configuration. Defaults to 'MacPro'.
   * Issue #510: Fix issues in /etc/hosts.
